Fix some errors

--- a/utils/emailVerify.html
+++ b/utils/emailVerify.html
@@ -44,11 +44,12 @@
         <div class="container">
         <h1>Email Verification</h1>
         <p>Thank you for registering! Please click the following link to verify your email address:</p>
-        <p><a href="{{verificationLink}}" class="button">Verify Email</a></p>
+        <button><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button">Verify Email</a></button>
         <p>If the button doesn't work, you can also copy and paste the following link into your browser:</p>
-        <p>{{verificationLink}}</p>
+        <a href="http://directprof.com/fr">http://directprof.com/fr</a>
         <p>This link will expire in 24 hours.</p>
-        <p>If you did not register on our site, you can ignore this email.</p>
+        <p>If you did not register on our site, click on this button</p>
+        <button><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button">I didn't register</a></button>
         </div>
     </body>
 </html>
